--- a/package.xml
+++ b/package.xml
@@ -30,7 +30,7 @@
  </lead>
  <date>2022-09-19</date>
  <version>
-  <release>5.1.22</release>
+  <release>5.1.23dev</release>
   <api>5.1.18</api>
  </version>
  <stability>
@@ -39,11 +39,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- PHP 8.2 compatibility
-- PHP 8.1 compatibility in apc.php
-- Fix --enable-apcu-rwlocks configure option
-- Enable transparent huge pages for mmap memory
-- Use monotonic clock for TTL
+- 
  </notes>
  <contents>
   <dir name="/">
@@ -189,6 +185,25 @@
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2022-09-19</date>
+   <version>
+    <release>5.1.22</release>
+    <api>5.1.18</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- PHP 8.2 compatibility
+- PHP 8.1 compatibility in apc.php
+- Fix --enable-apcu-rwlocks configure option
+- Enable transparent huge pages for mmap memory
+- Use monotonic clock for TTL
+   </notes>
+  </release>
   <release>
    <date>2021-10-07</date>
    <version>
