Revert "apc_time: use monotonic clock if available"
This reverts commit eb28fe1ab0918e604bd22c6c1c58bae5280b7d72.

As reported in #451, this makes the timestamps used by apcu
inconsistent with time(), which people may have reasonably relied
on.

--- a/package.xml
+++ b/package.xml
@@ -39,7 +39,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- 
+- Revert use of monotonic clock for TTL (#451)
  </notes>
  <contents>
   <dir name="/">
