--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -4,7 +4,7 @@ jobs:
   ubuntu:
     strategy:
       matrix:
-          version: ["7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
+          version: ["7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout apcu
