--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -31,7 +31,7 @@ jobs:
         shell: cmd
     strategy:
       matrix:
-          version: ["7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
+          version: ["7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3"]
           arch: [x64]
           ts: [nts, ts]
     runs-on: windows-latest
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup PHP
         id: setup-php
-        uses: cmb69/setup-php-sdk@v0.6
+        uses: php/setup-php-sdk@v0.8
         with:
           version: ${{matrix.version}}
           arch: ${{matrix.arch}}
