update ci & fixed test

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -16,15 +16,19 @@ jobs:
       - name: phpize
         run: phpize
       - name: configure
-        run: ./configure --enable-apcu-debug
+        run: ./configure --enable-apcu-debug --enable-pcntl
       - name: make
         run: make
       - name: test
         run: |
-            make test TESTS="--show-diff -d apc.serializer=default tests"
-            make test TESTS="--show-diff -d apc.serializer=php tests"
-            make test TESTS="--show-diff -d apc.serializer=default -d opcache.enable_cli=1 tests"
-            make test TESTS="--show-diff -d apc.serializer=php -d opcache.enable_cli=1 tests"
+            make test TESTS="--show-diff -d apc.serializer=default -d apc.eviction_policy=default tests"
+            make test TESTS="--show-diff -d apc.serializer=php -d apc.eviction_policy=default tests"
+            make test TESTS="--show-diff -d apc.serializer=default -d opcache.enable_cli=1 -d apc.eviction_policy=default tests"
+            make test TESTS="--show-diff -d apc.serializer=php -d opcache.enable_cli=1 -d apc.eviction_policy=default tests"
+            make test TESTS="--show-diff -d apc.serializer=default -d apc.eviction_policy=lru tests"
+            make test TESTS="--show-diff -d apc.serializer=php -d apc.eviction_policy=lru tests"
+            make test TESTS="--show-diff -d apc.serializer=default -d opcache.enable_cli=1 -d apc.eviction_policy=lru tests"
+            make test TESTS="--show-diff -d apc.serializer=php -d opcache.enable_cli=1 -d apc.eviction_policy=lru tests"
   windows:
     defaults:
       run:
