--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup PHP
         id: setup-php
-        uses: php/setup-php-sdk@v0.9
+        uses: php/setup-php-sdk@1248285eaa27e8fe99a03ad2108cf062669ac3f4
         with:
           version: ${{matrix.version}}
           arch: ${{matrix.arch}}
