Add test for expiration of entries when most of the memory is available

--- a/package.xml
+++ b/package.xml
@@ -74,6 +74,7 @@
     <file name="apc_024.phpt" role="test" />
     <file name="apc_025.phpt" role="test" />
     <file name="apc_026.phpt" role="test" />
+    <file name="apc_027.phpt" role="test" />
     <file name="apc_099.phpt" role="test" />
     <file name="apc54_014.phpt" role="test" />
     <file name="apc54_018.phpt" role="test" />
