Add support for hugetlb pages on Linux

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,6 +7,8 @@ jobs:
           version: ["7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3", "8.4"]
     runs-on: ubuntu-latest
     steps:
+      - name: Set the hugepages parameter
+        run: sudo sh -c "echo 16 > /proc/sys/vm/nr_hugepages"
       - name: Checkout apcu
         uses: actions/checkout@v4
       - name: Setup PHP
