Add defragmentation to apcu
This adds defragmentation logic to apcu, which is performed during the
default_expunge operation. It works by shifting all allocated blocks
to the left (low addresses), allowing all free blocks to be coalesced to
one larger free block on the right side.

--- a/package.xml
+++ b/package.xml
@@ -75,6 +75,7 @@
     <file name="apc_025.phpt" role="test" />
     <file name="apc_099.phpt" role="test" />
     <file name="apc54_014.phpt" role="test" />
+    <file name="apc_defrag.phpt" role="test" />
     <file name="apc54_018.phpt" role="test" />
     <file name="apc_disabled.phpt" role="test" />
     <file name="apc_entry_001.phpt" role="test" />
