--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -33,22 +33,10 @@ jobs:
         shell: cmd
     strategy:
       matrix:
-        version: ["7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3", "8.4"]
+        version: ["8.0", "8.1", "8.2", "8.3", "8.4"]
         arch: [x64]
         ts: [nts, ts]
-        os: [windows-2019, windows-2022]
-        exclude:
-          - { os: windows-2019, version: "8.4" }
-          - { os: windows-2019, version: "8.3" }
-          - { os: windows-2019, version: "8.2" }
-          - { os: windows-2019, version: "8.1" }
-          - { os: windows-2019, version: "8.0" }
-          - { os: windows-2022, version: "7.4" }
-          - { os: windows-2022, version: "7.3" }
-          - { os: windows-2022, version: "7.2" }
-          - { os: windows-2022, version: "7.1" }
-          - { os: windows-2022, version: "7.0" }
-    runs-on: ${{matrix.os}}
+    runs-on: windows-2022
     steps:
       - name: Checkout apcu
         uses: actions/checkout@v4
