Add test that a repeated unpersist doesn't break representation
The purpose of this test is to ensure that the unpersist-code does not
accidentally change the persistence representation in SHM (e.g., by the
offset -> pointer conversion), causing a second unpersist to fail.

--- a/package.xml
+++ b/package.xml
@@ -115,6 +115,7 @@
     <file name="apc_entry_recursion.phpt" role="test" />
     <file name="apcu_fetch_empty_array_reference.phpt" role="test" />
     <file name="apc_inc_perf.phpt" role="test" />
+    <file name="apc_repeated_unpersist.phpt" role="test" />
     <file name="apc_store_array_int_keys.phpt" role="test" />
     <file name="apc_store_array_with_refs.phpt" role="test" />
     <file name="apc_store_reference.phpt" role="test" />
