--- a/package.xml
+++ b/package.xml
@@ -30,7 +30,7 @@
  </lead>
  <date>2025-08-28</date>
  <version>
-  <release>5.1.27</release>
+  <release>5.1.28-dev</release>
   <api>5.1.18</api>
  </version>
  <stability>
@@ -39,12 +39,6 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-  - Fixed another hang introduced in apcu 5.1.25, which can occur when defragmentation is triggered
-    under load.
-
-  Internal changes:
-  - The report_memleaks INI directive has been removed from all tests as it will be deprecated in
-  PHP 8.5.
  </notes>
  <contents>
   <dir name="/">
@@ -198,6 +192,26 @@
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2025-08-28</date>
+   <version>
+    <release>5.1.27</release>
+    <api>5.1.18</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+     - Fixed another hang introduced in apcu 5.1.25, which can occur when defragmentation is triggered
+       under load.
+
+     Internal changes:
+     - The report_memleaks INI directive has been removed from all tests as it will be deprecated in
+       PHP 8.5.
+   </notes>
+  </release>
   <release>
    <date>2025-08-05</date>
    <version>
