--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -35,7 +35,7 @@ jobs:
         shell: cmd
     strategy:
       matrix:
-        version: ["8.0", "8.1", "8.2", "8.3", "8.4"]
+        version: ["8.0", "8.1", "8.2", "8.3", "8.4", "8.5"]
         arch: [x64]
         ts: [nts, ts]
     runs-on: windows-2022
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup PHP
         id: setup-php
-        uses: php/setup-php-sdk@v0.10
+        uses: php/setup-php-sdk@v0.11
         with:
           version: ${{matrix.version}}
           arch: ${{matrix.arch}}
