Improve SMA allocation performance and lock contention
The function sma_allocate() now inserts the unused part of a split block
at the beginning of the free list, instead of reinserting it at the
position of the original block. This prevents large blocks from falling
behind in the list when many small blocks are inserted at the beginning
of the list by sma_deallocate(). Benchmarks show that this improves
allocation performance and reduces the time the SMA lock must be held.

--- a/package.xml
+++ b/package.xml
@@ -39,6 +39,9 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
+  - Shared memory for new entries is allocated faster in scenarios with many free memory blocks.
+    This should improve APCu's insertion performance when entries are frequently deleted or
+    replaced, or when APCu is used with larger amounts of memory.
  </notes>
  <contents>
   <dir name="/">
