--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,7 @@
   - Shared memory for new entries is allocated faster in scenarios with many free memory blocks.
     This should improve APCu's insertion performance when entries are frequently deleted or
     replaced, or when APCu is used with larger amounts of memory.
+  - Trying to insert entries larger than the shared memory no longer results in cache wipes.
  </notes>
  <contents>
   <dir name="/">
