Prevent cache wipes caused by huge allocation attempts
Trying to insert entries larger than the shared memory no longer results
in the whole cache being discarded.

--- a/package.xml
+++ b/package.xml
@@ -39,9 +39,11 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
+  - Defragmentation now reclaims unused space from moved entries, resulting in better compaction.
   - Shared memory for new entries is allocated faster in scenarios with many free memory blocks.
     This should improve APCu's insertion performance when entries are frequently deleted or
     replaced, or when APCu is used with larger amounts of memory.
+  - Trying to insert entries larger than the shared memory no longer results in cache wipes.
  </notes>
  <contents>
   <dir name="/">
