Check files referenced by package.xml in the CI
The script checkrel.sh is used in the new CI job "common" to check if a
file is missing in package.xml. Is also has been improved to be
compatible with the Dash shell and to return an unsuccessful exit code
if the check fails.

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,6 +1,13 @@
 name: Build and Test
 on: [push, pull_request]
 jobs:
+  common:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout apcu
+        uses: actions/checkout@v4
+      - name: Check files referenced in package.xml
+        run: ./checkrel.sh
   ubuntu:
     strategy:
       matrix:
